--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -6,6 +6,7 @@ androidx-browser = "1.8.0"
 androidx-cardview = "1.0.0"
 androidx-collection-ktx = "1.4.0"
 androidx-core-ktx = "1.13.1"
+androidx-datastore = "1.1.1"
 androidx-espresso-core = "3.5.1"
 androidx-fragment-ktx = "1.7.0"
 androidx-legacy-support-v4 = "1.0.0"
@@ -32,6 +33,7 @@ androidx-browser = { module = "androidx.browser:browser", version.ref = "android
 androidx-cardview = { module = "androidx.cardview:cardview", version.ref = "androidx-cardview" }
 androidx-collection-ktx = { module = "androidx.collection:collection-ktx", version.ref = "androidx-collection-ktx" }
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "androidx-core-ktx" }
+androidx-datastore = { module = "androidx.datastore:datastore-preferences", version.ref = "androidx-datastore" }
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "androidx-espresso-core" }
 androidx-fragment-ktx = { module = "androidx.fragment:fragment-ktx", version.ref = "androidx-fragment-ktx" }
 androidx-legacy-support-v4 = { module = "androidx.legacy:legacy-support-v4", version.ref = "androidx-legacy-support-v4" }
