--- a/gradle.properties
+++ b/gradle.properties
@@ -21,15 +21,17 @@
 #Gradle
 # The jvmargs below have been tuned to work on CI. You might want to override this
 # value in ~/.gradle/gradle.properties to give more RAM if your machine has it available.
-org.gradle.jvmargs=-Xmx2048M -Dfile.encoding=UTF-8 -Dkotlin.daemon.jvm.options\="-Xmx2048M"
+org.gradle.jvmargs=-Xmx4096M -XX:MaxMetaspaceSize=1024m -Dfile.encoding=UTF-8 -Dkotlin.daemon.jvm.options\="-Xmx2048M"
 org.gradle.caching=true
 org.gradle.parallel=true
 org.gradle.configuration-cache=true
+
 # Initially setting this to warn to not be too disruptive if there are cases where configuration cache is not working.
 org.gradle.configuration-cache.problems=warn
 
 #Kotlin
 kotlin.code.style=official
+ksp.useKSP2=false
 
 #Android
 android.useAndroidX=true
