--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -17,17 +17,18 @@ androidx-navigation-runtime-ktx = "2.7.7"
 androidx-recyclerview = "1.3.2"
 androidx-room = "2.6.1"
 androidx-test-ext-junit = "1.1.5"
+firebase-crashlytics = "2.9.9" #Crashes due to a circular dependency on 3.0.0
+firebase-bom = "33.0.0"
+google-services = "4.4.1"
 hilt = "2.50"
 junit = "4.13.2"
 junit-jupiter = "5.10.1"
-kotlin-android = "1.9.23"
-ksp = "1.9.23-1.0.20"
+kotlin = "2.0.0"
+kotlinx-serialization-json = "1.6.3"
+ksp = "2.0.0-1.0.21"
 material = "1.12.0"
 review-ktx = "2.0.1"
 truth = "1.1.5"
-google-services = "4.4.1"
-firebase-bom = "33.0.0"
-firebase-crashlytics = "2.9.9" #Crashes due to a circular dependency on 3.0.0
 
 [libraries]
 androidx-annotation = { module = "androidx.annotation:annotation", version.ref = "androidx-annotation" }
@@ -55,6 +56,7 @@ hilt-android-compiler = { module = "com.google.dagger:hilt-android-compiler", ve
 hilt-android-testing = { module = "com.google.dagger:hilt-android-testing", version.ref = "hilt" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 junit-jupiter = { module = "org.junit.jupiter:junit-jupiter", version.ref = "junit-jupiter" }
+kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinx-serialization-json" }
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 review-ktx = { module = "com.google.android.play:review-ktx", version.ref = "review-ktx" }
 truth = { module = "com.google.truth:truth", version.ref = "truth" }
@@ -64,9 +66,10 @@ firebase-crashlytics = { module = "com.google.firebase:firebase-crashlytics-ktx"
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
+firebase-crashlytics = { id = "com.google.firebase.crashlytics", version.ref = "firebase-crashlytics" }
+google-services = { id = "com.google.gms.google-services", version.ref = "google-services" }
 hilt = { id = "com.google.dagger.hilt.android", version.ref = "hilt"}
 ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin-android" }
+kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
+kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
 room = { id = "androidx.room", version.ref = "androidx-room" }
-google-services = { id = "com.google.gms.google-services", version.ref = "google-services" }
-firebase-crashlytics = { id = "com.google.firebase.crashlytics", version.ref = "firebase-crashlytics" }
